Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Thu 05 April 2018</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/rthomas-on-monotonicity-in-language.html">RThomas on Monotonicity in&nbsp;Language</a></dd>
     <dt>Fri 30 March 2018</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/remi-eyraud-on-syntactic-congruency-inference.html">Remi Eyraud on Syntactic Congruency&nbsp;Inference</a></dd>
     <dt>Fri 23 March 2018</dt>
