--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Thu 05 April 2018</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/rthomas-on-monotonicity-in-language.html">RThomas on Monotonicity in&nbsp;Language</a></dd>
     <dt><b>Fri 30 March 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/remi-eyraud-on-syntactic-congruency-inference.html">Remi Eyraud on Syntactic Congruency&nbsp;Inference</a></dd>
     <dt><b>Fri 23 March 2018</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree&nbsp;Transducers</a></dd>
     <dt><b>Fri 02 March 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-on-tree-transducers.html">Thomas on Tree&nbsp;Transducers</a></dd>
-    <dt><b>Fri 23 February 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/adam-on-category-theory.html">Adam on Category&nbsp;Theory</a></dd>
 </dl>
 		  </div>	
 		  
