--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -85,13 +85,13 @@
 </tr>
 <tr>
 <td>4/6</td>
-<td><span class="caps">TBD</span></td>
+<td>Thomas</td>
 <td>Graph Theory</td>
 </tr>
 <tr>
 <td>4/13</td>
-<td><span class="caps">TBD</span></td>
-<td>Graph Theory</td>
+<td>Jon</td>
+<td>Jardine on Autosegments (forthcoming) Theory</td>
 </tr>
 <tr>
 <td>4/20</td>
