Generate Pelican site

--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -86,12 +86,12 @@
 <tr>
 <td>4/6</td>
 <td>Thomas</td>
-<td>Graph Theory</td>
+<td>Monotonicity in Language Theory</td>
 </tr>
 <tr>
 <td>4/13</td>
 <td>Jon</td>
-<td>Jardine on Autosegments (forthcoming) Theory</td>
+<td>Jardine on Autosegments (forthcoming)</td>
 </tr>
 <tr>
 <td>4/20</td>
