--- a/archives.html
+++ b/archives.html
@@ -35,6 +35,8 @@
 <h1>Archives for MathLing@SBU</h1>
 
 <dl>
+    <dt>Fri 20 April 2018</dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-mlrg-this-week.html">No <span class="caps">MLRG</span> This&nbsp;Week</a></dd>
     <dt>Fri 13 April 2018</dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/jon-on-autosegmental-graph-grammars.html">Jon on Autosegmental Graph&nbsp;Grammars</a></dd>
     <dt>Thu 05 April 2018</dt>
