--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ The group is very interdisciplinary in nature and we welcome guests from other&n
 Recent News
 </h2>
 <dl>
+    <dt><b>Fri 20 April 2018</b></dt>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/no-mlrg-this-week.html">No <span class="caps">MLRG</span> This&nbsp;Week</a></dd>
     <dt><b>Fri 13 April 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/jon-on-autosegmental-graph-grammars.html">Jon on Autosegmental Graph&nbsp;Grammars</a></dd>
     <dt><b>Thu 05 April 2018</b></dt>
@@ -66,8 +68,6 @@ Recent News
     <dd><a href="http://complab-stonybrook.github.io/mlrg/remi-eyraud-on-syntactic-congruency-inference.html">Remi Eyraud on Syntactic Congruency&nbsp;Inference</a></dd>
     <dt><b>Fri 23 March 2018</b></dt>
     <dd><a href="http://complab-stonybrook.github.io/mlrg/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict&nbsp;Locality</a></dd>
-    <dt><b>Fri 09 March 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree&nbsp;Transducers</a></dd>
 </dl>
 		  </div>	
 		  
