--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -95,13 +95,13 @@
 </tr>
 <tr>
 <td>4/20</td>
-<td><span class="caps">TBD</span></td>
-<td>Category Theory</td>
+<td>canceled</td>
+<td>canTheory</td>
 </tr>
 <tr>
 <td>4/27</td>
-<td><span class="caps">TBD</span></td>
-<td>Category Theory</td>
+<td>Rob</td>
+<td>Monotonicity in Semantics Theory</td>
 </tr>
 <tr>
 <td>5/4</td>
