--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -86,7 +86,7 @@
 <tr>
 <td>4/6</td>
 <td>Thomas</td>
-<td>Monotonicity in Language Theory</td>
+<td>Monotonicity in Language</td>
 </tr>
 <tr>
 <td>4/13</td>
@@ -95,18 +95,18 @@
 </tr>
 <tr>
 <td>4/20</td>
-<td>canceled</td>
-<td>canTheory</td>
+<td>cancelled</td>
+<td></td>
 </tr>
 <tr>
 <td>4/27</td>
 <td>Rob</td>
-<td>Monotonicity in Semantics Theory</td>
+<td>Monotonicity in Semantics</td>
 </tr>
 <tr>
 <td>5/4</td>
-<td><span class="caps">TBD</span></td>
-<td><span class="caps">TBD</span></td>
+<td>Cancelled</td>
+<td></td>
 </tr>
 </tbody>
 </table>		
