Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">	
 <head>
 	<meta charset="utf-8"/>
-	<title><span class="caps">SBU</span> MathLing Reading&nbsp;Group- MLRG</title>	
+	<title>SBU MathLing Reading Group- MLRG</title>	
 	<meta name="author" content="Thomas Graf">
 	
 
@@ -32,41 +32,41 @@
 
 		  <div role="main" class="content">
 
-<h1><span class="caps">SBU</span> MathLing Reading&nbsp;Group</h1>
-<p>This is the website for the Mathematical Linguistics Reading Group (<span class="caps">MLRG</span>) in the <a href="http://linguistics.stonybrook.edu">Department of Linguistics</a> at <a href="http://www.stonybrook.edu">Stony Brook University</a>.</p>
-<p>The reading group provides a venue&nbsp;for</p>
+<h1>SBU MathLing Reading Group</h1>
+<p>This is the website for the Mathematical Linguistics Reading Group (MLRG) in the <a href="http://linguistics.stonybrook.edu">Department of Linguistics</a> at <a href="http://www.stonybrook.edu">Stony Brook University</a>.</p>
+<p>The reading group provides a venue for</p>
 <ul>
-<li>paper&nbsp;discussions,</li>
-<li>practice&nbsp;talks,</li>
-<li>invited&nbsp;talks,</li>
-<li>presentations of ongoing&nbsp;research,</li>
-<li>and much&nbsp;more.</li>
+<li>paper discussions,</li>
+<li>practice talks,</li>
+<li>invited talks,</li>
+<li>presentations of ongoing research,</li>
+<li>and much more.</li>
 </ul>
 <p>Pretty much anything goes, as long as it has some formal/mathematical component to it.
-The group is very interdisciplinary in nature and we welcome guests from other&nbsp;departments.</p>
+The group is very interdisciplinary in nature and we welcome guests from other departments.</p>
 <p>You can follow us by <a href="http://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml">subscribing to our news feed</a>.</p>
-<h2>Current&nbsp;Semester</h2>
+<h2>Current Semester</h2>
 <p><strong>Time</strong>: <a href="https://www.when2meet.com/?7018028-BSZj7">check the poll</a><br>
-<strong>Location</strong>: CompLab (<span class="caps">SBS</span> N-250)<br>
+<strong>Location</strong>: CompLab (SBS N-250)<br>
 <strong>Topics</strong>: see <a href="http://complab-stonybrook.github.io/mlrg/schedule.html">Schedule</a><br>
 <strong>Readings</strong>: <a href="https://drive.google.com/a/stonybrook.edu/folderview?id=0B09645QdWLiYVVRjSElwcVkwaTg&amp;usp=sharing">Google drive</a> (access restricted)<br>
 <strong>Student Organizer(s)</strong>: Ayla Karakas<br>
-<strong>Faculty Organizer</strong>: <a href="http://thomasgraf.net">Thomas&nbsp;Graf</a></p>		
+<strong>Faculty Organizer</strong>: <a href="http://thomasgraf.net">Thomas Graf</a></p>		
 
 <h2>
 Recent News
 </h2>
 <dl>
     <dt><b>Tue 21 August 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-fall/meeting-time-poll-for-fall-2018.html">Meeting Time Poll for Fall&nbsp;2018</a></dd>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-fall/meeting-time-poll-for-fall-2018.html">Meeting Time Poll for Fall 2018</a></dd>
     <dt><b>Fri 23 March 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict&nbsp;Locality</a></dd>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict Locality</a></dd>
     <dt><b>Fri 09 March 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree&nbsp;Transducers</a></dd>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree Transducers</a></dd>
     <dt><b>Fri 02 March 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html">Thomas on Tree&nbsp;Transducers</a></dd>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html">Thomas on Tree Transducers</a></dd>
     <dt><b>Fri 23 February 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/adam-on-category-theory.html">Adam on Category&nbsp;Theory</a></dd>
+    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/adam-on-category-theory.html">Adam on Category Theory</a></dd>
 </dl>
 		  </div>	
 		  
