--- a/semester/2016-fall.html
+++ b/semester/2016-fall.html
@@ -43,12 +43,12 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/fall-2016-final-meeting.html" rel="bookmark" title="Permalink to Fall 2016 Final&nbsp;Meeting">Fall 2016 Final&nbsp;Meeting</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/fall-2016-final-meeting.html" rel="bookmark" title="Permalink to Fall 2016 Final Meeting">Fall 2016 Final Meeting</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>Tomorrow we&#8217;ll meet for our final meeting of the semester.
-It will be a short organizational meeting, mostly focused on brainstorming topic ideas for next semester, and maybe how we think this past semester approach&nbsp;worked.</p>
-<p>See you all&nbsp;tomorrow!</p></p>
+    <p><p>Hi all!</p>
+<p>Tomorrow we'll meet for our final meeting of the semester.
+It will be a short organizational meeting, mostly focused on brainstorming topic ideas for next semester, and maybe how we think this past semester approach worked.</p>
+<p>See you all tomorrow!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -59,12 +59,12 @@ It will be a short organizational meeting, mostly focused on brainstorming topic
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/next-meeting-cancelled.html" rel="bookmark" title="Permalink to Next Meeting&nbsp;Cancelled">Next Meeting&nbsp;Cancelled</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/next-meeting-cancelled.html" rel="bookmark" title="Permalink to Next Meeting Cancelled">Next Meeting Cancelled</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>This week we will have no meeting, due to end-of-semester scheduling conflicts.
-We will meet one last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next&nbsp;semester.</p>
-<p>Have a great&nbsp;week.</p></p>
+We will meet one last time before the Winter Break, on Friday 9th - to discuss topics/organizational issues for next semester.</p>
+<p>Have a great week.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -75,12 +75,12 @@ We will meet one last time before the Winter Break, on Friday 9th - to discuss t
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/this-friday-thomas-on-subregular-semantics.html" rel="bookmark" title="Permalink to This Friday: Thomas on Subregular&nbsp;Semantics">This Friday: Thomas on Subregular&nbsp;Semantics</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/this-friday-thomas-on-subregular-semantics.html" rel="bookmark" title="Permalink to This Friday: Thomas on Subregular Semantics">This Friday: Thomas on Subregular Semantics</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>This week Thomas will give a talk about semantics, automata, and the subregular hierarchy.
-We&#8217;ll meet in the Comp Ling Lab at the usual time (1.25 to&nbsp;2.15).</p>
-<p>See you on&nbsp;Friday!</p></p>
+We'll meet in the Comp Ling Lab at the usual time (1.25 to 2.15).</p>
+<p>See you on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -91,12 +91,12 @@ We&#8217;ll meet in the Comp Ling Lab at the usual time (1.25 to&nbsp;2.15).</p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/schedule-change-and-future-meetings.html" rel="bookmark" title="Permalink to Schedule Change and Future&nbsp;Meetings">Schedule Change and Future&nbsp;Meetings</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/schedule-change-and-future-meetings.html" rel="bookmark" title="Permalink to Schedule Change and Future Meetings">Schedule Change and Future Meetings</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>As we discussed last time, the schedule for the last part of the semester has been slightly&nbsp;changed.</p>
-<p>Next Friday, Adam will lead a discussion with the title &#8220;Randomness in Algorithmic and Quantum Information Theory&#8221;.
-We&#8217;ll probably send a reminder later this week, but the meeting time …</p></p>
+    <p><p>Hi all!</p>
+<p>As we discussed last time, the schedule for the last part of the semester has been slightly changed.</p>
+<p>Next Friday, Adam will lead a discussion with the title "Randomness in Algorithmic and Quantum Information Theory".
+We'll probably send a reminder later this week, but the meeting time and …</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -107,13 +107,13 @@ We&#8217;ll probably send a reminder later this week, but the meeting time …</
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/gary-mar-on-chaos-theory.html" rel="bookmark" title="Permalink to Gary Mar on Chaos&nbsp;Theory">Gary Mar on Chaos&nbsp;Theory</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/gary-mar-on-chaos-theory.html" rel="bookmark" title="Permalink to Gary Mar on Chaos Theory">Gary Mar on Chaos Theory</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>This week (usual time, usual place) Gary will introduce us to the complexities of Chaos Theory -
-it&#8217;ll be a lot of&nbsp;fun!</p>
-<p>In the Google Drive Folder, you can now find a simple and playful introduction about Gary&#8217;s 
-research on &#8220;Chaos, Fractals and the Dynamical Semantics …</p></p>
+it'll be a lot of fun!</p>
+<p>In the Google Drive Folder, you can now find a simple and playful introduction about Gary's 
+research on "Chaos, Fractals and the Dynamical Semantics of Paradox …</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -124,12 +124,12 @@ research on &#8220;Chaos, Fractals and the Dynamical Semantics …</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/friday-meeting-on-network-theory.html" rel="bookmark" title="Permalink to Friday Meeting on Network&nbsp;Theory">Friday Meeting on Network&nbsp;Theory</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/friday-meeting-on-network-theory.html" rel="bookmark" title="Permalink to Friday Meeting on Network Theory">Friday Meeting on Network Theory</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>After last week&#8217;s hiatus, we&#8217;ll be meeting on Friday (usual time, usual place) to chat about Network Theory.
-Jon will lead the discussion, and you can find a review paper by Newman in the Google Drive&nbsp;Folder.</p>
-<p>See you on&nbsp;Friday!</p></p>
+    <p><p>Hi all!</p>
+<p>After last week's hiatus, we'll be meeting on Friday (usual time, usual place) to chat about Network Theory.
+Jon will lead the discussion, and you can find a review paper by Newman in the Google Drive Folder.</p>
+<p>See you on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -140,12 +140,12 @@ Jon will lead the discussion, and you can find a review paper by Newman in the G
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/second-meeting-on-categorial-grammars.html" rel="bookmark" title="Permalink to Second Meeting on Categorial&nbsp;Grammars">Second Meeting on Categorial&nbsp;Grammars</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/second-meeting-on-categorial-grammars.html" rel="bookmark" title="Permalink to Second Meeting on Categorial Grammars">Second Meeting on Categorial Grammars</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>We&#8217;ll be meeting tomorrow (usual time, usual place) for our second session on Categorial Grammars.
-In case you want to read something, in our shared Google Drive you can find a paper by Steedman and&nbsp;Baldrige.</p>
-<p>Hope to see you all&nbsp;tomorrow!</p></p>
+    <p><p>Hi all!</p>
+<p>We'll be meeting tomorrow (usual time, usual place) for our second session on Categorial Grammars.
+In case you want to read something, in our shared Google Drive you can find a paper by Steedman and Baldrige.</p>
+<p>Hope to see you all tomorrow!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -156,11 +156,11 @@ In case you want to read something, in our shared Google Drive you can find a pa
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/model-theoretic-syntax-second-meeting-today.html" rel="bookmark" title="Permalink to Model Theoretic Syntax: second meeting&nbsp;today">Model Theoretic Syntax: second meeting&nbsp;today</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/model-theoretic-syntax-second-meeting-today.html" rel="bookmark" title="Permalink to Model Theoretic Syntax: second meeting today">Model Theoretic Syntax: second meeting today</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>Sorry for this late announcement but, as per schedule, we&#8217;ll be meeting today at 1.15 <span class="caps">PM</span> in the Computational Linguistics Lab to continue our chat about Model Theoretic&nbsp;Syntax.</p>
-<p>Hope to see you all this&nbsp;afternoon!</p></p>
+    <p><p>Hi all!</p>
+<p>Sorry for this late announcement but, as per schedule, we'll be meeting today at 1.15 PM in the Computational Linguistics Lab to continue our chat about Model Theoretic Syntax.</p>
+<p>Hope to see you all this afternoon!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -171,11 +171,11 @@ In case you want to read something, in our shared Google Drive you can find a pa
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/model-theoretic-syntax-meeting.html" rel="bookmark" title="Permalink to Model Theoretic Syntax&nbsp;meeting">Model Theoretic Syntax&nbsp;meeting</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/model-theoretic-syntax-meeting.html" rel="bookmark" title="Permalink to Model Theoretic Syntax meeting">Model Theoretic Syntax meeting</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>As per schedule, we&#8217;ll be meeting tomorrow at 1.15 <span class="caps">PM</span> in the Computational Linguistics Lab to chat about Model Theoretic Syntax.
-As usual, there is nothing in particular you <strong>need</strong> to read but, if you are interested, there is now a <span class="caps">MTS</span> folder in the reading …</p></p>
+    <p><p>Hi all!</p>
+<p>As per schedule, we'll be meeting tomorrow at 1.15 PM in the Computational Linguistics Lab to chat about Model Theoretic Syntax.
+As usual, there is nothing in particular you <strong>need</strong> to read but, if you are interested, there is now a MTS folder in the reading group's …</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -186,11 +186,11 @@ As usual, there is nothing in particular you <strong>need</strong> to read but, 
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/fall-2016-meeting-time.html" rel="bookmark" title="Permalink to Fall 2016 Meeting&nbsp;time">Fall 2016 Meeting&nbsp;time</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/fall-2016-meeting-time.html" rel="bookmark" title="Permalink to Fall 2016 Meeting time">Fall 2016 Meeting time</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>We&#8217;ll be having our organizational meeting for the Math Reading Group <strong>this Friday from 1:15 to 2:15 in the Comp Ling lab</strong> (for those of you who don&#8217;t know where this is, directions are given below).
-This will be the normal meeting time/location …</p></p>
+    <p><p>Hi all!</p>
+<p>We'll be having our organizational meeting for the Math Reading Group <strong>this Friday from 1:15 to 2:15 in the Comp Ling lab</strong> (for those of you who don't know where this is, directions are given below).
+This will be the normal meeting time/location for the …</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -201,11 +201,11 @@ This will be the normal meeting time/location …</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/doodle-poll-for-meeting-time-fall-2016.html" rel="bookmark" title="Permalink to Doodle Poll for Meeting Time Fall&nbsp;2016">Doodle Poll for Meeting Time Fall&nbsp;2016</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/doodle-poll-for-meeting-time-fall-2016.html" rel="bookmark" title="Permalink to Doodle Poll for Meeting Time Fall 2016">Doodle Poll for Meeting Time Fall 2016</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>The first meeting of the semester will be Friday, September 2nd, and we need to agree on a meeting time.
-Please go to the <a href="http://doodle.com/poll/wexxd9gy4hidt73m">Doodle poll</a> and fill in the&nbsp;form.</p>
+Please go to the <a href="http://doodle.com/poll/wexxd9gy4hidt73m">Doodle poll</a> and fill in the form.</p>
 <p>This year we might experiment with the idea of choosing several topics and dedicate about a month …</p></p>
   </div>
 </article><article class="summary">
@@ -217,12 +217,13 @@ Please go to the <a href="http://doodle.com/poll/wexxd9gy4hidt73m">Doodle poll</
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/two-logic-classes-this-coming-fall.html" rel="bookmark" title="Permalink to Two Logic Classes This Coming&nbsp;Fall">Two Logic Classes This Coming&nbsp;Fall</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-fall/two-logic-classes-this-coming-fall.html" rel="bookmark" title="Permalink to Two Logic Classes This Coming Fall">Two Logic Classes This Coming Fall</a>
     </h2>
     <p><p>Gary Mar will be teaching two logic classes this semester that should 
-be of interest to <span class="caps">MLRG</span> attendees. One is his Introduction to Symbolic 
-Logic (<span class="caps">PHI</span> 220, <span class="caps">MWF</span> 10-11), the other his Gödel seminar (M 4&#8212;7). An 
-outline of the seminar is given at the end of this&nbsp;message …</p></p>
+be of interest to MLRG attendees. One is his Introduction to Symbolic 
+Logic (PHI 220, MWF 10-11), the other his Gödel seminar (M 4--7). An 
+outline of the seminar is given at the end of this message.</p>
+<p>This …</p></p>
   </div>
 </article>
 
