--- a/semester/2018-spring.html
+++ b/semester/2018-spring.html
@@ -43,9 +43,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html" rel="bookmark" title="Permalink to Discussion on Advances in Tier-Based Strict&nbsp;Locality">Discussion on Advances in Tier-Based Strict&nbsp;Locality</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html" rel="bookmark" title="Permalink to Discussion on Advances in Tier-Based Strict Locality">Discussion on Advances in Tier-Based Strict Locality</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>This Friday, March 9th, James Rogers from earlham college is visiting our dept. We will have a free-form discussion and brainstorm of various advances in Tier-Based Strictly Local Languages. No reading is required, though familiarity with formal languages and the Subregular Hierarchy will be helpful. Hope to see …</p></p>
   </div>
 </article><article class="summary">
@@ -57,10 +57,10 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html" rel="bookmark" title="Permalink to Thomas Continues on Tree&nbsp;Transducers">Thomas Continues on Tree&nbsp;Transducers</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html" rel="bookmark" title="Permalink to Thomas Continues on Tree Transducers">Thomas Continues on Tree Transducers</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, March 9th, Thomas will continue discussing Tree automata and transducers. No reading is required. Hope to see you all&nbsp;there!</p></p>
+    <p><p>Hi all!</p>
+<p>This Friday, March 9th, Thomas will continue discussing Tree automata and transducers. No reading is required. Hope to see you all there!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -71,10 +71,10 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html" rel="bookmark" title="Permalink to Thomas on Tree&nbsp;Transducers">Thomas on Tree&nbsp;Transducers</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html" rel="bookmark" title="Permalink to Thomas on Tree Transducers">Thomas on Tree Transducers</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, March 9th, discuss Tree automata and transducers. No reading is required. Hope to see you all&nbsp;there!</p></p>
+    <p><p>Hi all!</p>
+<p>This Friday, March 9th, discuss Tree automata and transducers. No reading is required. Hope to see you all there!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -85,10 +85,10 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/adam-on-category-theory.html" rel="bookmark" title="Permalink to Adam on Category&nbsp;Theory">Adam on Category&nbsp;Theory</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/adam-on-category-theory.html" rel="bookmark" title="Permalink to Adam on Category Theory">Adam on Category Theory</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, February 16 Adam will discuss Category Theory and Ologs. a reading is provided in the Google Drive. Hope to see you all&nbsp;there!</p></p>
+    <p><p>Hi all!</p>
+<p>This Friday, February 16 Adam will discuss Category Theory and Ologs. a reading is provided in the Google Drive. Hope to see you all there!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -99,10 +99,10 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/rob-on-category-theory.html" rel="bookmark" title="Permalink to Rob on Category&nbsp;Theory">Rob on Category&nbsp;Theory</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/rob-on-category-theory.html" rel="bookmark" title="Permalink to Rob on Category Theory">Rob on Category Theory</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, February 16 Rob will give us an introduction to Category Theory. Hope to see you all&nbsp;there!</p></p>
+    <p><p>Hi all!</p>
+<p>This Friday, February 16 Rob will give us an introduction to Category Theory. Hope to see you all there!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -113,10 +113,10 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/schedule-and-meeting-time.html" rel="bookmark" title="Permalink to Schedule and Meeting&nbsp;Time">Schedule and Meeting&nbsp;Time</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/schedule-and-meeting-time.html" rel="bookmark" title="Permalink to Schedule and Meeting Time">Schedule and Meeting Time</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>We revised the meeting time for this semester to: 1:30-2:30 pm, Fridays. The next meeting (2/9) is&nbsp;cancelled.</p></p>
+    <p><p>Hi all!</p>
+<p>We revised the meeting time for this semester to: 1:30-2:30 pm, Fridays. The next meeting (2/9) is cancelled.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -127,12 +127,12 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/schedule-and-first-meeting.html" rel="bookmark" title="Permalink to Schedule and First&nbsp;Meeting">Schedule and First&nbsp;Meeting</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/schedule-and-first-meeting.html" rel="bookmark" title="Permalink to Schedule and First Meeting">Schedule and First Meeting</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>The meeting time for this semester is Fridays, 11:15-12:15 pm.
-The next meeting will be held on February 2. Jeff Heinz will give an introduction to Automata Theory, string/tree transductions, and&nbsp;Myhill-Nerode.</p>
-<p>Hope to see you all&nbsp;there!</p></p>
+The next meeting will be held on February 2. Jeff Heinz will give an introduction to Automata Theory, string/tree transductions, and Myhill-Nerode.</p>
+<p>Hope to see you all there!</p></p>
   </div>
 </article>
 
