--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
 
 <h1>History</h1>
 <p>While meetings are open to whatever somebody in the group wants to talk about, we usually pick a main topic for each semester.
-So far, the following topics have been&nbsp;covered:</p>
+So far, the following topics have been covered:</p>
 <table>
 <thead>
 <tr>
