--- a/semester/2016-spring.html
+++ b/semester/2016-spring.html
@@ -43,9 +43,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/february-5th-cancellation.html" rel="bookmark" title="Permalink to February 5th&nbsp;Cancellation">February 5th&nbsp;Cancellation</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/february-5th-cancellation.html" rel="bookmark" title="Permalink to February 5th Cancellation">February 5th Cancellation</a>
     </h2>
-    <p><p>Hey everyone, this announcement is just to let you know that because of the weather, we&#8217;ll be <strong>cancelling</strong> our meeting today. So as not to screw up the schedule, we&#8217;ll just hold off on my presentation, and if anyone needs to cancel a non-game theory presentation I&#8217;ll …</p></p>
+    <p><p>Hey everyone, this announcement is just to let you know that because of the weather, we'll be <strong>cancelling</strong> our meeting today. So as not to screw up the schedule, we'll just hold off on my presentation, and if anyone needs to cancel a non-game theory presentation I'll jump in.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -56,9 +56,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/handouts-from-last-few-meetings.html" rel="bookmark" title="Permalink to Handouts from Last Few&nbsp;Meetings">Handouts from Last Few&nbsp;Meetings</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/handouts-from-last-few-meetings.html" rel="bookmark" title="Permalink to Handouts from Last Few Meetings">Handouts from Last Few Meetings</a>
     </h2>
-    <p><p>A couple of handouts have now been added to the Google drive. This includes the slides to Camillo&#8217;s talk on signaling games, Alena and Sophie&#8217;s slides on computational morphology, and Gary&#8217;s write-up of Gödel&#8217;s modal logic proof of the existence of&nbsp;God.</p></p>
+    <p><p>A couple of handouts have now been added to the Google drive. This includes the slides to Camillo's talk on signaling games, Alena and Sophie's slides on computational morphology, and Gary's write-up of Gödel's modal logic proof of the existence of God.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -69,9 +69,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/tomorrows-meeting-is-on-computational-morphology.html" rel="bookmark" title="Permalink to Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology">Tomorrow&#8217;s Meeting is on Computational&nbsp;Morphology</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/tomorrows-meeting-is-on-computational-morphology.html" rel="bookmark" title="Permalink to Tomorrow's Meeting is on Computational Morphology">Tomorrow's Meeting is on Computational Morphology</a>
     </h2>
-    <p><p>Contrary to what&#8217;s claimed on the schedule, tomorrow&#8217;s meeting will be run by Alena and Sophie, who will report their first results on the computational complexity of&nbsp;morphology.</p></p>
+    <p><p>Contrary to what's claimed on the schedule, tomorrow's meeting will be run by Alena and Sophie, who will report their first results on the computational complexity of morphology.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -82,10 +82,10 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/april-1st-cancellation.html" rel="bookmark" title="Permalink to April 1st&nbsp;Cancellation">April 1st&nbsp;Cancellation</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/april-1st-cancellation.html" rel="bookmark" title="Permalink to April 1st Cancellation">April 1st Cancellation</a>
     </h2>
-    <p><p>Just a quick reminder: tomorrow&#8217;s reading group is cancelled so that everybody can attend the talks at <a href="http://www.stonybrook.edu/commcms/lsrl/#"><span class="caps">LSRL</span> 46</a>.
-We will resume at our usual time on April&nbsp;8.</p></p>
+    <p><p>Just a quick reminder: tomorrow's reading group is cancelled so that everybody can attend the talks at <a href="http://www.stonybrook.edu/commcms/lsrl/#">LSRL 46</a>.
+We will resume at our usual time on April 8.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -96,11 +96,11 @@ We will resume at our usual time on April&nbsp;8.</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/schedule-change.html" rel="bookmark" title="Permalink to Schedule&nbsp;Change">Schedule&nbsp;Change</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/schedule-change.html" rel="bookmark" title="Permalink to Schedule Change">Schedule Change</a>
     </h2>
-    <p><p>Since Chong is still recuperating I will instead talk about the relation of <span class="caps">OT</span> and antimatroids.
+    <p><p>Since Chong is still recuperating I will instead talk about the relation of OT and antimatroids.
 The paper is <a href="https://drive.google.com/a/stonybrook.edu/file/d/0B09645QdWLiYY18xSTJFb3JmT0U/view?usp=sharing">available in the Google drive</a>.
-Note: my presentation is not related to game theory, so we&#8217;re temporarily breaking our alternating&nbsp;schedule.</p></p>
+Note: my presentation is not related to game theory, so we're temporarily breaking our alternating schedule.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -111,9 +111,9 @@ Note: my presentation is not related to game theory, so we&#8217;re temporarily 
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/aniellos-slides.html" rel="bookmark" title="Permalink to Aniello&#8217;s&nbsp;Slides">Aniello&#8217;s&nbsp;Slides</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/aniellos-slides.html" rel="bookmark" title="Permalink to Aniello's Slides">Aniello's Slides</a>
     </h2>
-    <p><p>You can find a copy of the slides from Aniello&#8217;s presentation <a href="https://drive.google.com/a/stonybrook.edu/file/d/0B09645QdWLiYM3pNRy01WTJQeUE/view?usp=sharing">here</a>.</p></p>
+    <p><p>You can find a copy of the slides from Aniello's presentation <a href="https://drive.google.com/a/stonybrook.edu/file/d/0B09645QdWLiYM3pNRy01WTJQeUE/view?usp=sharing">here</a>.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -124,9 +124,9 @@ Note: my presentation is not related to game theory, so we&#8217;re temporarily 
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/topology-without-tears-link.html" rel="bookmark" title="Permalink to Topology Without Tears&nbsp;Link">Topology Without Tears&nbsp;Link</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/topology-without-tears-link.html" rel="bookmark" title="Permalink to Topology Without Tears Link">Topology Without Tears Link</a>
     </h2>
-    <p><p>In my presentation, I mentioned a <span class="caps">PDF</span> book called &#8220;Topology Without Tears&#8221;, which is a nice introduction to the basic topics of topology. You can find a link <a href="http://u.math.biu.ac.il/~megereli/topbook.pdf">here</a></p></p>
+    <p><p>In my presentation, I mentioned a PDF book called "Topology Without Tears", which is a nice introduction to the basic topics of topology. You can find a link <a href="http://u.math.biu.ac.il/~megereli/topbook.pdf">here</a></p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -137,10 +137,10 @@ Note: my presentation is not related to game theory, so we&#8217;re temporarily 
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/handout-from-first-meeting.html" rel="bookmark" title="Permalink to Handout from First&nbsp;Meeting">Handout from First&nbsp;Meeting</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/handout-from-first-meeting.html" rel="bookmark" title="Permalink to Handout from First Meeting">Handout from First Meeting</a>
     </h2>
     <p><p>The slides from our first meeting are now available in the <a href="https://drive.google.com/a/stonybrook.edu/folderview?id=0B09645QdWLiYVVRjSElwcVkwaTg&amp;usp=sharing">Google drive</a>.
-Thanks again to Alejandro for all the work he put into&nbsp;them.</p></p>
+Thanks again to Alejandro for all the work he put into them.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -151,11 +151,11 @@ Thanks again to Alejandro for all the work he put into&nbsp;them.</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/final-meeting-time.html" rel="bookmark" title="Permalink to Final Meeting&nbsp;Time">Final Meeting&nbsp;Time</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/final-meeting-time.html" rel="bookmark" title="Permalink to Final Meeting Time">Final Meeting Time</a>
     </h2>
-    <p><p>We&#8217;ll be having our organizational meeting for the Math Reading Group <strong>this Friday from 2-3 in the comp ling lab</strong> (directions are given below).
+    <p><p>We'll be having our organizational meeting for the Math Reading Group <strong>this Friday from 2-3 in the comp ling lab</strong> (directions are given below).
 This will be the normal meeting time/location for the reading group this semester.
-Also note that barring some sort of craziness, all remaining updates …</p></p>
+Also note that barring some sort of craziness, all remaining updates will …</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -166,7 +166,7 @@ Also note that barring some sort of craziness, all remaining updates …</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/doodle-poll-for-meeting-time.html" rel="bookmark" title="Permalink to Doodle Poll for Meeting&nbsp;Time">Doodle Poll for Meeting&nbsp;Time</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2016-spring/doodle-poll-for-meeting-time.html" rel="bookmark" title="Permalink to Doodle Poll for Meeting Time">Doodle Poll for Meeting Time</a>
     </h2>
     <p><p>As usual, we need to agree on a meeting time.
 To the best of my knowledge, there will be no classes scheduled for Friday this semester, so we should have a wider range of options than last time around.
