--- a/semester/2017-fall.html
+++ b/semester/2017-fall.html
@@ -43,9 +43,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/hossep-continuing-on-reduplication.html" rel="bookmark" title="Permalink to Hossep Continuing on&nbsp;Reduplication">Hossep Continuing on&nbsp;Reduplication</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/hossep-continuing-on-reduplication.html" rel="bookmark" title="Permalink to Hossep Continuing on Reduplication">Hossep Continuing on Reduplication</a>
     </h2>
-    <p><p>This week, Hossep will continue his presentation from last week on reduplication. details and papers can be found from last week&#8217;s announcement. See you on&nbsp;Friday!</p></p>
+    <p><p>This week, Hossep will continue his presentation from last week on reduplication. details and papers can be found from last week's announcement. See you on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -56,9 +56,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/sam-van-gool-tutorial.html" rel="bookmark" title="Permalink to Sam van Gool&nbsp;Tutorial">Sam van Gool&nbsp;Tutorial</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/sam-van-gool-tutorial.html" rel="bookmark" title="Permalink to Sam van Gool Tutorial">Sam van Gool Tutorial</a>
     </h2>
-    <p><p>This week there is no MathLing meeting due to the holiday, but as a special treat, please enjoy the slides from Sam  van Gool&#8217;s Fontiers talk last Friday on the Google drive! Those looking for an extended version may visit his&nbsp;website.</p></p>
+    <p><p>This week there is no MathLing meeting due to the holiday, but as a special treat, please enjoy the slides from Sam  van Gool's Fontiers talk last Friday on the Google drive! Those looking for an extended version may visit his website.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -69,9 +69,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/hossep-on-computing-reduplication-typology-and-learning.html" rel="bookmark" title="Permalink to Hossep on &#8220;Computing Reduplication: Typology and&nbsp;Learning&#8221;">Hossep on &#8220;Computing Reduplication: Typology and&nbsp;Learning&#8221;</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/hossep-on-computing-reduplication-typology-and-learning.html" rel="bookmark" title="Permalink to Hossep on "Computing Reduplication: Typology and Learning"">Hossep on "Computing Reduplication: Typology and Learning"</a>
     </h2>
-    <p><p>This Friday, Hossep will present &#8220;Computing Reduplication: Typology and Learning&#8221;, based on his recent manuscript Reduplication with Finite-State Technology&#8221;, which is uploaded to the Google Drive. See you&nbsp;Friday!</p></p>
+    <p><p>This Friday, Hossep will present "Computing Reduplication: Typology and Learning", based on his recent manuscript Reduplication with Finite-State Technology", which is uploaded to the Google Drive. See you Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -82,9 +82,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/no-meeting-on-nov-10.html" rel="bookmark" title="Permalink to No Meeting on Nov&nbsp;10">No Meeting on Nov&nbsp;10</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/no-meeting-on-nov-10.html" rel="bookmark" title="Permalink to No Meeting on Nov 10">No Meeting on Nov 10</a>
     </h2>
-    <p><p>There will be no meeting on Nov 10 since several people are out of town. Sorry for the late&nbsp;notice.</p></p>
+    <p><p>There will be no meeting on Nov 10 since several people are out of town. Sorry for the late notice.</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -95,12 +95,12 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/alena-on-formal-restrictions-on-multiple-tiers.html" rel="bookmark" title="Permalink to Alena on &#8220;Formal Restrictions on Multiple&nbsp;Tiers&#8221;">Alena on &#8220;Formal Restrictions on Multiple&nbsp;Tiers&#8221;</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/alena-on-formal-restrictions-on-multiple-tiers.html" rel="bookmark" title="Permalink to Alena on "Formal Restrictions on Multiple Tiers"">Alena on "Formal Restrictions on Multiple Tiers"</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, Alena will present her recent manuscript &#8220;Formal Restrictions on Multiple Tiers&#8221;. The abstract is below. See you all&nbsp;Friday!</p>
+    <p><p>Hi all!</p>
+<p>This Friday, Alena will present her recent manuscript "Formal Restrictions on Multiple Tiers". The abstract is below. See you all Friday!</p>
 <p>Abstract:
-The class of tier-based strictly local (<span class="caps">TSL</span>) languages has shown itself as a good fit for natural language patterns. Although there are some cases when one …</p></p>
+The class of tier-based strictly local (TSL) languages has shown itself as a good fit for natural language patterns. Although there are some cases when one …</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -111,10 +111,10 @@ The class of tier-based strictly local (<span class="caps">TSL</span>) languages
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/mai-ha-vu-udelaware-on-model-theoretic-syntax.html" rel="bookmark" title="Permalink to Mai Ha Vu (UDelaware) on &#8220;Model-Theoretic&nbsp;Syntax&#8221;">Mai Ha Vu (UDelaware) on &#8220;Model-Theoretic&nbsp;Syntax&#8221;</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/mai-ha-vu-udelaware-on-model-theoretic-syntax.html" rel="bookmark" title="Permalink to Mai Ha Vu (UDelaware) on "Model-Theoretic Syntax"">Mai Ha Vu (UDelaware) on "Model-Theoretic Syntax"</a>
     </h2>
-    <p><p>This Friday, Mai Ha Vu from University of Delaware will discuss Model-Theoretic Syntax, building on the work of Pullum and Schultz (2010) and Jim Rogers&#8217;s (1998) model-theoretic treatment of <span class="caps">GB</span> theory.
-See you all on&nbsp;Friday!</p></p>
+    <p><p>This Friday, Mai Ha Vu from University of Delaware will discuss Model-Theoretic Syntax, building on the work of Pullum and Schultz (2010) and Jim Rogers's (1998) model-theoretic treatment of GB theory.
+See you all on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -125,11 +125,11 @@ See you all on&nbsp;Friday!</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/enes-avcu-udelaware-on-evolution-of-neural-networks.html" rel="bookmark" title="Permalink to Enes Avcu (UDelaware) on &#8220;Evolution of Neural&nbsp;networks&#8221;">Enes Avcu (UDelaware) on &#8220;Evolution of Neural&nbsp;networks&#8221;</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/enes-avcu-udelaware-on-evolution-of-neural-networks.html" rel="bookmark" title="Permalink to Enes Avcu (UDelaware) on "Evolution of Neural networks"">Enes Avcu (UDelaware) on "Evolution of Neural networks"</a>
     </h2>
     <p><p>Hi all!
 This Friday, Enes Avcu from UDelaware will discuss the development of recursive neural networks, from perceptrons to Long Short-Term Memory nets. There is no corresponding reading
-See you all on&nbsp;Friday!</p></p>
+See you all on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -140,11 +140,11 @@ See you all on&nbsp;Friday!</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/jeff-on-backpropagation-and-stochastic-gradient-descent.html" rel="bookmark" title="Permalink to Jeff on Backpropagation and Stochastic Gradient&nbsp;Descent">Jeff on Backpropagation and Stochastic Gradient&nbsp;Descent</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/jeff-on-backpropagation-and-stochastic-gradient-descent.html" rel="bookmark" title="Permalink to Jeff on Backpropagation and Stochastic Gradient Descent">Jeff on Backpropagation and Stochastic Gradient Descent</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, Jeff will discuss backpropagation and stochadtic gradient descent in neural nets. The corresponding reading (Section 2.8 of Yoav Goldberg&#8217;s book &#8220;Neural Network Methods for Natural Language Processing&#8221;) can be found on the Google Drive. 
-See you all on&nbsp;Friday!</p></p>
+    <p><p>Hi all!</p>
+<p>This Friday, Jeff will discuss backpropagation and stochadtic gradient descent in neural nets. The corresponding reading (Section 2.8 of Yoav Goldberg's book "Neural Network Methods for Natural Language Processing") can be found on the Google Drive. 
+See you all on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -155,11 +155,11 @@ See you all on&nbsp;Friday!</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/jon-on-geometric-representations-of-minimalist-grammars.html" rel="bookmark" title="Permalink to Jon on Geometric representations of Minimalist&nbsp;Grammars">Jon on Geometric representations of Minimalist&nbsp;Grammars</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/jon-on-geometric-representations-of-minimalist-grammars.html" rel="bookmark" title="Permalink to Jon on Geometric representations of Minimalist Grammars">Jon on Geometric representations of Minimalist Grammars</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, Jon will discuss beim Graben and Gerth&#8217;s paper of &#8220;Geometric Representations for Minimalist Grammars&#8221;. The paper can be found on the Google Drive. 
-See you all on&nbsp;Friday!</p></p>
+    <p><p>Hi all!</p>
+<p>This Friday, Jon will discuss beim Graben and Gerth's paper of "Geometric Representations for Minimalist Grammars". The paper can be found on the Google Drive. 
+See you all on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -170,11 +170,11 @@ See you all on&nbsp;Friday!</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/tensor-product-representations-and-harmonic-grammar.html" rel="bookmark" title="Permalink to Tensor Product Representations and Harmonic&nbsp;Grammar">Tensor Product Representations and Harmonic&nbsp;Grammar</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/tensor-product-representations-and-harmonic-grammar.html" rel="bookmark" title="Permalink to Tensor Product Representations and Harmonic Grammar">Tensor Product Representations and Harmonic Grammar</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
-<p>This Friday, Jon will give a talk on Tensor Product Representations and Harmonic Grammar. The accompanied reading is Smolensky and Legendre&#8217;s &#8220;Harmonic Mind Vol. 1&#8221; which can be found on the Google Drive.
-See you all on&nbsp;Friday!</p></p>
+    <p><p>Hi all!</p>
+<p>This Friday, Jon will give a talk on Tensor Product Representations and Harmonic Grammar. The accompanied reading is Smolensky and Legendre's "Harmonic Mind Vol. 1" which can be found on the Google Drive.
+See you all on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -187,9 +187,9 @@ See you all on&nbsp;Friday!</p></p>
     <h2>
       <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/perceptrons.html" rel="bookmark" title="Permalink to Perceptrons">Perceptrons</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>This Friday, Thomas is going to give an Introduction to Perceptrons
-See you all on&nbsp;Friday!</p></p>
+See you all on Friday!</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -200,13 +200,13 @@ See you all on&nbsp;Friday!</p></p>
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/aniello-on-geometrical-morphology.html" rel="bookmark" title="Permalink to Aniello on Geometrical&nbsp;Morphology">Aniello on Geometrical&nbsp;Morphology</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/aniello-on-geometrical-morphology.html" rel="bookmark" title="Permalink to Aniello on Geometrical Morphology">Aniello on Geometrical Morphology</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>This Friday, Aniello is going to talk about geometrical approaches to morphological paradigms,
 based on a recent paper by Goldsmith.
-As usual, you don&#8217;t need to read the paper, but if you are curious you can find it in the Math Reading Group&#8217;s Google&nbsp;Drive.</p>
-<p>See …</p></p>
+As usual, you don't need to read the paper, but if you are curious you can find it in the Math Reading Group's Google Drive.</p>
+<p>See you all …</p></p>
   </div>
 </article><article class="summary">
 <div class="metadata">
@@ -217,12 +217,12 @@ As usual, you don&#8217;t need to read the paper, but if you are curious you can
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/schedule-and-next-meeting.html" rel="bookmark" title="Permalink to Schedule and Next&nbsp;meeting">Schedule and Next&nbsp;meeting</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2017-fall/schedule-and-next-meeting.html" rel="bookmark" title="Permalink to Schedule and Next meeting">Schedule and Next meeting</a>
     </h2>
-    <p><p>Hi&nbsp;all!</p>
+    <p><p>Hi all!</p>
 <p>The meeting time for this semester is Fridays, 12-1 pm.
-The next meeting of the Mathematical Linguistics Reading Group will be held on September 8. Gary Mar will present his paper &#8220;A Brief History of the Logic of&nbsp;Time&#8221;.</p>
-<p>Hope to see you all&nbsp;there!</p></p>
+The next meeting of the Mathematical Linguistics Reading Group will be held on September 8. Gary Mar will present his paper "A Brief History of the Logic of Time".</p>
+<p>Hope to see you all there!</p></p>
   </div>
 </article>
 
