--- a/semester/2018-fall.html
+++ b/semester/2018-fall.html
@@ -43,9 +43,9 @@
   in <a href="http://complab-stonybrook.github.io/mlrg/semester/2018-fall.html">2018-Fall</a>
 </div>  <div>
     <h2>
-      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-fall/meeting-time-poll-for-fall-2018.html" rel="bookmark" title="Permalink to Meeting Time Poll for Fall&nbsp;2018">Meeting Time Poll for Fall&nbsp;2018</a>
+      <a href="http://complab-stonybrook.github.io/mlrg/news/2018-fall/meeting-time-poll-for-fall-2018.html" rel="bookmark" title="Permalink to Meeting Time Poll for Fall 2018">Meeting Time Poll for Fall 2018</a>
     </h2>
-    <p><p>Welcome back&nbsp;everyone!</p>
+    <p><p>Welcome back everyone!</p>
 <p>With the start of a new semester, we have to once again agree on a meeting time.
 As usual, we will meet for one hour each Friday at some time around noon.
 Please indicate your scheduling constraints at the <a href="https://www.when2meet.com/?7018028-BSZj7">when2meet poll</a>.</p></p>
