--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	
 
 	<link rel="top" href="#" /><link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic|Source+Code+Pro' rel='stylesheet' type='text/css'></link>
-	<link rel="stylesheet" href="http://complab-stonybrook.github.io/mlrg/theme/css/main.css" type="text/css" />
+	<link rel="stylesheet" href="https://complab-stonybrook.github.io/mlrg/theme/css/main.css" type="text/css" />
 		
 
-    <link href="http://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="MLRG Atom Feed" />
+    <link href="https://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="MLRG Atom Feed" />
 </head>
 	
 <body>
@@ -19,13 +19,13 @@
 	  
 	  <header role="banner">
 	    <div class="feeds">
-	        <a href="http://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml" rel="alternate"><img src="http://complab-stonybrook.github.io/mlrg/theme/images/icons/feed-32px.png" alt="atom feed"/></a>
+	        <a href="https://complab-stonybrook.github.io/mlrg/feeds/all.atom.xml" rel="alternate"><img src="https://complab-stonybrook.github.io/mlrg/theme/images/icons/feed-32px.png" alt="atom feed"/></a>
 	    </div>
 	      <nav class="pages">
-			  <a href="http://complab-stonybrook.github.io/mlrg/history.html">History</a>
--			  <a href="http://complab-stonybrook.github.io/mlrg/schedule.html">Schedule</a>
+			  <a href="https://complab-stonybrook.github.io/mlrg/history.html">History</a>
+-			  <a href="https://complab-stonybrook.github.io/mlrg/schedule.html">Schedule</a>
 	      </nav>
-		<a href="http://complab-stonybrook.github.io/mlrg" class="title">MLRG</a>
+		<a href="https://complab-stonybrook.github.io/mlrg" class="title">MLRG</a>
       </header>
 	
 	  <div class="wrapper">
@@ -48,7 +48,7 @@ The group is very interdisciplinary in nature and we welcome guests from other d
 <h2>Current Semester</h2>
 <p><strong>Time</strong>: <a href="https://www.when2meet.com/?7018028-BSZj7">check the poll</a><br>
 <strong>Location</strong>: CompLab (SBS N-250)<br>
-<strong>Topics</strong>: see <a href="http://complab-stonybrook.github.io/mlrg/schedule.html">Schedule</a><br>
+<strong>Topics</strong>: see <a href="https://complab-stonybrook.github.io/mlrg/schedule.html">Schedule</a><br>
 <strong>Readings</strong>: <a href="https://drive.google.com/a/stonybrook.edu/folderview?id=0B09645QdWLiYVVRjSElwcVkwaTg&amp;usp=sharing">Google drive</a> (access restricted)<br>
 <strong>Student Organizer(s)</strong>: Ayla Karakas<br>
 <strong>Faculty Organizer</strong>: <a href="http://thomasgraf.net">Thomas Graf</a></p>		
@@ -58,15 +58,15 @@ Recent News
 </h2>
 <dl>
     <dt><b>Tue 21 August 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-fall/meeting-time-poll-for-fall-2018.html">Meeting Time Poll for Fall 2018</a></dd>
+    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-fall/meeting-time-poll-for-fall-2018.html">Meeting Time Poll for Fall 2018</a></dd>
     <dt><b>Fri 23 March 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict Locality</a></dd>
+    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/discussion-on-advances-in-tier-based-strict-locality.html">Discussion on Advances in Tier-Based Strict Locality</a></dd>
     <dt><b>Fri 09 March 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree Transducers</a></dd>
+    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-continues-on-tree-transducers.html">Thomas Continues on Tree Transducers</a></dd>
     <dt><b>Fri 02 March 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html">Thomas on Tree Transducers</a></dd>
+    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/thomas-on-tree-transducers.html">Thomas on Tree Transducers</a></dd>
     <dt><b>Fri 23 February 2018</b></dt>
-    <dd><a href="http://complab-stonybrook.github.io/mlrg/news/2018-spring/adam-on-category-theory.html">Adam on Category Theory</a></dd>
+    <dd><a href="https://complab-stonybrook.github.io/mlrg/news/2018-spring/adam-on-category-theory.html">Adam on Category Theory</a></dd>
 </dl>
 		  </div>	
 		  
@@ -75,12 +75,12 @@ Recent News
 	        <nav>
 	          <h2>Archive</h2>
 	          <ul>
-	              <li ><a href="http://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a></li>
-	              <li ><a href="http://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a></li>
-	              <li ><a href="http://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a></li>
-	              <li ><a href="http://complab-stonybrook.github.io/mlrg/semester/2017-spring.html">2017-Spring</a></li>
-	              <li ><a href="http://complab-stonybrook.github.io/mlrg/semester/2018-fall.html">2018-Fall</a></li>
-	              <li ><a href="http://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a></li>
+	              <li ><a href="https://complab-stonybrook.github.io/mlrg/semester/2016-fall.html">2016-Fall</a></li>
+	              <li ><a href="https://complab-stonybrook.github.io/mlrg/semester/2016-spring.html">2016-Spring</a></li>
+	              <li ><a href="https://complab-stonybrook.github.io/mlrg/semester/2017-fall.html">2017-Fall</a></li>
+	              <li ><a href="https://complab-stonybrook.github.io/mlrg/semester/2017-spring.html">2017-Spring</a></li>
+	              <li ><a href="https://complab-stonybrook.github.io/mlrg/semester/2018-fall.html">2018-Fall</a></li>
+	              <li ><a href="https://complab-stonybrook.github.io/mlrg/semester/2018-spring.html">2018-Spring</a></li>
 	          </ul>
 	        </nav>
 
